--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --detectOpenHandles test",
     "build": "node_modules/typescript/bin/tsc",
     "start": "node src/index.js"
   },
   "author": "Levente Dobos",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.26.3",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
@@ -18,6 +19,14 @@
     "@types/express-session": "^1.18.0",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
+    "circus": "^4.2.0",
+    "eslint": "^9.16.0",
+    "babel": "^6.23.0",
+    "babel-jest": "^29.7.0",
+    "jasmine": "^5.5.0",
+    "jest": "^29.7.0",
+    "jest-circus": "^29.7.0",
+    "jest-jasmine2": "^29.7.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
